# msprime

./: .clang-format  .codecov.yml  .flake8  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.md  CITATION.rst  Dockerfile  How_to_install_msprime_development.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  UI_update.md  _msprimemodule.c  _tskitmodule.c  adk_devNotebook.ipynb  algorithms.py  appveyor.yml  asv.conf.json  circle.yml  codecov.yml  consistency_test.py  dev.py  environment.yml  example.R  foo  joined_ped.ts  large-example.py  lwt_interface  mscompat_dev.py  msp_dev.py  mspms_dev.py  (+14 more)
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: debug-windows.yml  docs.yml  lint.yml  tests.yml  wheels.yml
benchmarks/: benchmarks.py  check_asv.sh  update_asv_site.sh  version_hashes.txt
conda-recipe/: meta.yaml
containers/: docker-minimal
data/: .gitignore  Makefile  run_old_msprime.py
data/ms/: Makefile  ms.c  streec.c  (+1 more)
docs/: CITATION.md  CITATION.rst  Doxyfile  Makefile  __init__.py  _config.yml  _toc.yml  ancestry.md  ancestry.rst  api.md  api.rst  build.sh  changelog.rst  cli.md  cli.rst  conf.py  demes_example_01.yaml  demography.md  demography.rst  development.md  development.rst  examples.py  feedback.txt  file-format.rst  formal-model.rst  index.rst  index_rename_to_trigger_404.rst  installation.md  installation.rst  interchange.rst  intro.md  introduction.rst  legacy.md  likelihoods.md  likelihoods.rst  logging.md  mutations.md  mutations.rst  notes_ms_users.md  old_examples.py  (+19 more)
lib/: .clang-format  .gitignore  Makefile  avl.c  avl.h  bit.c  bit.h  dev.cfg  devSimple.cfg  environment.c  err.h  fenwick.c  fenwick.h  fenwick.py  forward.c  forward.h  hapgen.c  interval_map.c  ld.c  likelihood.c  likelihood.h  main.c  meson.build  msprime.c  msprime.h  msprime.py  mutgen.c  newick.c  object_heap.c  object_heap.h  rate_map.c  rate_map.h  recomb_map.c  simulation_tests.c  table.c  table_example.c  table_example_cpp.cc  tables.c  tables.h  test_bit.c  (+11 more)
lib/dev-tools/: dev-cli.c  example.cfg
lib/dirac/: dev.cfg
lib/gsl/: config.h  gsl_math.h  gsl_randist.h  gsl_rng.h
lib/gsl/randist/: beta.c  binomial.c  gamma.c  multinomial.c  poisson.c
lib/gsl/rng/: rng.c  uni.c
lib/gsl/specfunc/: beta.c  beta_inc.c  exp.c  gamma.c  log.c  psi.c  zeta.c
lib/subprojects/: kastore  tskit  tskit.wrap
lib/subprojects/packagecache/: tskit-1.0.0.tar.xz
lib/subprojects/tskit-1.0.0/: .meson-subproject-wrap-hash.txt  CHANGELOG.rst  meson.build  meson_options.txt  tskit.h
lib/subprojects/tskit-1.0.0/examples/: Makefile  api_structure.c  cpp_sorting_example.cpp  error_handling.c  haploid_wright_fisher.c  streaming.c  tree_iteration.c  tree_traversal.c
lib/subprojects/tskit-1.0.0/subprojects/kastore/: README.md  kastore.c  kastore.h  meson.build
lib/subprojects/tskit-1.0.0/tests/: test_convert.c  test_core.c  test_file_format.c  test_genotypes.c  test_haplotype_matching.c  test_minimal_cpp.cpp  test_stats.c  test_tables.c  test_trees.c  testlib.c  testlib.h
lib/subprojects/tskit-1.0.0/tskit/: convert.c  convert.h  core.c  core.h  genotypes.c  genotypes.h  haplotype_matching.c  haplotype_matching.h  stats.c  stats.h  tables.c  tables.h  trees.c  trees.h
lib/tests/: test_ancestry.c  test_core.c  test_fenwick.c  test_forward.c  test_likelihood.c  test_mutations.c  test_pedigrees.c  test_rate_map.c  test_sweeps.c  testlib.c  testlib.h  tests.c
lib/tmp__NOBACKUP__/: .gitignore
lib/tskit/: Makefile  main.c  old_tests.c  test_core.c  test_genotypes.c  test_tables.c  test_trees.c  testlib.c  testlib.h  tsk_convert.c  tsk_convert.h  tsk_core.c  tsk_core.h  tsk_genotypes.c  tsk_genotypes.h  tsk_stats.c  tsk_stats.h  tsk_tables.c  tsk_tables.h  tsk_trees.c  tsk_trees.h  tskit.h
msprime/: __init__.py  _msprimemodule.c  ancestry.py  branch_stats.py  cli.py  core.py  demography.py  drawing.py  environment.py  exceptions.py  formats.py  intervals.py  json_input.py  likelihood.py  mutations.py  pedigrees.py  provenance.py  provenance.schema.json  simulations.py  species_tree.py  species_trees.py  stats.py  tables.py  trees.py  utils.py
notebooks/: Forward_con_mig.ipynb  Forword_con_mig.ipynb  Forword_con_nomig.ipynb  complete_sims.ipynb  sims.ipynb
py_algorithms/: Our_forward_trajectory_v5 copy.ipynb  Our_forward_trajectory_v5.ipynb  algorithms.py  algorithms_20231113.py  complete_sims.ipynb  general_forward_v2.py  sims.ipynb  test.py  test_read_binary.c  verify.ipynb
requirements/: conda-minimal.txt  development.txt  docs.txt  readthedocs.txt  tests-pypi.txt  verification.txt
simplify_work/: algorithms.py  paint_simplify.py  simplify_algorithm.md  simplify_algorithms.py  test_paint_simplify.py  test_simplify.py
temp/: simplify.py  test_simplify.py
tests/: __init__.py  conftest.py  demes_delete_me.py  simplify.py  test_algorithms.py  test_ancestry.py  test_branch_stats.py  test_cli.py  test_continue_simulation.py  test_core.py  test_demes.py  test_demography.py  test_deprecation.py  test_dict_encoding.py  test_doc_examples.py  test_drawing.py  test_file_format.py  test_formats.py  test_hdf5.py  test_highlevel.py  test_imports_star.py  test_intervals.py  test_likelihood.py  test_lowlevel.py  test_matrix_exponential.py  test_metadata.py  test_minimise.py  test_models.py  test_mutations.py  test_newick.py  test_pedigree.py  test_provenance.py  test_python_c.py  test_recombination_map.py  test_simulate_from.py  test_species_tree_parsing.py  test_stats.py  test_tables.py  test_threads.py  test_topology.py  (+9 more)
tskit/: __init__.py  drawing.py  exceptions.py  formats.py  provenance.py  stats.py  tables.py  trees.py
tskit_tests/: __init__.py  simplify.py  test_dict_encoding.py  test_drawing.py  test_file_format.py  test_highlevel.py  test_lowlevel.py  test_metadata.py  test_newick.py  test_provenance.py  test_stats.py  test_tables.py  test_threads.py  test_topology.py  test_tree_stats.py  test_vcf.py  test_wright_fisher.py  tsutil.py
(+100 files in other folders)
