[project]
name = "msprime"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Simulate genealogical trees and genomic sequence data using population genetic models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3+"}
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = [
    "coalescent simulation",
    "population genetics",
    "ms",
    "tree sequence",
    "tskit"
]
dependencies = [
    "numpy>=1.23.5",
    "newick>=1.3.0",
    "tskit>=1.0.0",
    "demes>=0.2"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://tskit.dev/msprime"
Documentation = "https://tskit.dev/msprime/docs/stable"
Changelog = "https://tskit.dev/msprime/docs/stable/CHANGELOG.html"
"Bug Tracker" = "https://github.com/tskit-dev/msprime/issues"
"Source Code" = "https://github.com/tskit-dev/msprime/"

[project.scripts]
mspms = "msprime.cli:mspms_main"
msp = "msprime.cli:msp_main"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm",
    "wheel",
    "numpy>=2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["msprime"]
include-package-data = true

[tool.setuptools_scm]
write_to = "msprime/_version.py"

[project.optional-dependencies]
test = [
    "bintrees==2.2.0",
    "build==1.3.0",
    "daiquiri==3.3.0",
    "demes==0.2.3",
    "kastore==0.3.3",
    "meson==1.9.0",
    "newick==1.10.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-xdist==3.8.0",
    "python_jsonschema_objects==0.5.7",
    "setuptools==80.9.0",
    "scipy==1.13.1; python_version<='3.10'",
    "scipy==1.16.1; python_version>'3.10'",
    "tskit==1.0.0",
    "twine==6.2.0"
]

docs = [
    "daiquiri==3.3.0",
    "demes==0.2.3",
    "demesdraw==0.4.0",
    "jupyter-book==1.0.4.post1",
    "networkx==3.5",
    "matplotlib==3.10.3",
    "newick==1.10.0",
    "setuptools==80.9.0",
    "sphinx-argparse==0.5.2",
    "sphinx-book-theme",
    "sphinx-issues==5.0.1",
    "tskit==1.0.0",
    "scipy==1.16.1"
]

dev = [
    "docutils==0.21.2",
    "asv==0.6.1",
    "bintrees",
    "coverage",
    "daiquiri",
    "demes>=0.2.0",
    "demesdraw",
    "flake8",
    "matplotlib>=3.4.0",
    "meson>=0.61.0",
    "mock",
    "mypy",
    "ninja",
    "numpy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tskit>=1.0.0",
    "kastore",
    "sphinx-book-theme",
    "scipy",
    "setuptools_scm",
    "sphinx>=4.4",
    "sphinx-argparse",
    "sphinx-issues",
    "jupyter-book<2",
    "networkx",
    "newick>=1.3.0",
    "python_jsonschema_objects"
]

verification = [
    "dendropy",
    "matplotlib",
    "numpy",
    "pandas",
    "pyvolve",
    "scipy==1.2",
    "scikit-allel",
    "statsmodels",
    "seaborn",
    "tqdm",
    "argparse",
    "daiquiri",
    "pyslim>=1.0"
]

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*usage of `cmp`.*:DeprecationWarning:demes"
]
