[project]
name = "msprime"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Simulate genealogical trees and genomic sequence data using population genetic models"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = [
    "coalescent simulation",
    "population genetics",
    "ms",
    "tree sequence",
    "tskit"
]
dependencies = [
    "numpy>=2",
    "newick>=1.3.0",
    "tskit>=1.0.0",
    "demes>=0.2"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://tskit.dev/msprime"
Documentation = "https://tskit.dev/msprime/docs/stable"
Changelog = "https://tskit.dev/msprime/docs/stable/CHANGELOG.html"
"Bug Tracker" = "https://github.com/tskit-dev/msprime/issues"
"Source Code" = "https://github.com/tskit-dev/msprime/"

[project.scripts]
mspms = "msprime.cli:mspms_main"
msp = "msprime.cli:msp_main"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm",
    "wheel",
    "numpy>=2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["msprime"]
include-package-data = true

[tool.setuptools_scm]
write_to = "msprime/_version.py"

[dependency-groups]
test = [
    "bintrees",
    "daiquiri",
    "kastore",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "python_jsonschema_objects",
    "setuptools",
    "scipy",
    "tskit",
    "twine"
]

docs = [
    "daiquiri",
    "demes",
    "demesdraw",
    "jupyter-book",
    "networkx",
    "matplotlib",
    "newick",
    "setuptools",
    "sphinx-argparse",
    "sphinx-book-theme",
    "sphinx-issues",
    "tskit",
    "scipy"
]

lint = [
    "clang-format==21.1.8",
    "prek",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

verification = [
    "dendropy",
    "matplotlib",
    "numpy",
    "pandas",
    "pyvolve",
    "scipy",
    "scikit-allel",
    "statsmodels",
    "seaborn",
    "tqdm",
    "argparse",
    "daiquiri",
    "pyslim>=1.0"
]

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*usage of `cmp`.*:DeprecationWarning:demes"
]

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

line-length = 89
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "E741", # using 'l' as a variable name
    "N806", "N802", "N803", # Various nags about uppercase vars
    "N818", # Exceptions not called "Error"
    "UP032", # Don't upgrade to f strings
    "UP031", # Allow old-skool format specifiers
    "B904", # raise from-issues
    "PT009", # pytest.raises(ValueError) too broad
    "PT011", # pytest.raises(ValueError) too broad
    "PT012", # pytest.raises() block should contain a single simple statement
    "B018", # Found useless expression. Either assign it
    "B028", # No stacklevel for warnings
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["_msprime", "msprime"]
known-third-party = [
  "tskit",
  "numpy",
  "pytest",
]
