[metadata]
name = msprime
author = Tskit Developers
author_email = admin@tskit.dev
license = GNU GPLv3+ 
# NOTE: description *must* be on one line.
description = Simulate genealogical trees and genomic sequence data using population genetic models
long_description_content_type = text/markdown
long_description = file: README.md
url = https://tskit.dev/msprime
project_urls =
    Bug Tracker = https://github.com/tskit-dev/msprime/issues
    Documentation = https://tskit.dev/msprime/docs/stable
classifiers =
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = 
    coalescent simulation
    population genetics
    ms
    tree sequence
    tskit
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = msprime
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    newick 
    tskit>=0.3.3
setup_requires =
    numpy
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts = 
    mspms = msprime.cli:mspms_main
    msp = msprime.cli:msp_main
