[metadata]
name = msprime
author = Tskit Developers
author_email = admin@tskit.dev
license = GNU GPLv3+ 
# NOTE: description *must* be on one line.
description = Simulate genealogical trees and genomic sequence data using population genetic models
long_description_content_type = text/markdown
long_description = file: README.md
url = https://tskit.dev/msprime
project_urls =
    Documentation = https://tskit.dev/msprime/docs/stable
    Changelog = https://tskit.dev/msprime/docs/stable/CHANGELOG.html
    Bug Tracker = https://github.com/tskit-dev/msprime/issues
    GitHub = https://github.com/tskit-dev/msprime/
classifiers =
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Development Status :: 5 - Production/Stable 
    Environment :: Other Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = 
    coalescent simulation
    population genetics
    ms
    tree sequence
    tskit
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = msprime
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    newick>=1.3.0
    tskit>=0.5.2
    demes>=0.2

[options.entry_points]
console_scripts = 
    mspms = msprime.cli:mspms_main
    msp = msprime.cli:msp_main

[tool:pytest]
addopts = -n 4
testpaths =
    tests
# Demes uses a previously-deprecated attrs feature, which as of attrs 21.1.0
# has been undeprecated. An older version of attrs is likely installed though,
# because jupyter-book dependencies pin to attrs<21.
filterwarnings =
    ignore:.*usage of `cmp`.*:DeprecationWarning:demes